# nova

./: .dockerignore  .gitignore  .ignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  FINAL-PLAN.md  PLAN.md  PRD.md  README.md  conftest.py  openapi-ts.config.ts  package-lock.json  package.json  pyproject.toml
.agents/AUDIT_DELIVERABLES/: 00_EXECUTIVE_SUMMARY.md  03_FINDINGS_REGISTER.csv  04_REMEDIATION_ROADMAP.md  07_IMPLEMENTATION_BACKLOG.csv  10_STATUS_UPDATE_2026-03-16.md
.agents/nova-dash-atomic-implementation-prompts/: 13-nova-phase-4-sdk-hardening-python.md
.agents/nova_codex_prompt_pack/: FILE_IMPACT_MAP.md  ISSUE_REGISTER.md  NOVA_CODEX_PROMPT_PACK.md  PROMPT_ISSUE_MATRIX.md
.agents/plans/: 2026-04-02-file-handling-spec.md
.github/: CODEOWNERS
.github/workflows/: auth0-tenant-deploy.yml  build-and-publish-image.yml  cfn-contract-validate.yml  ci.yml  conformance-clients.yml  conformance.yml  deploy-dev.yml  deploy-runtime.yml  post-deploy-validate.yml  promote-prod.yml  publish-packages.yml  release-apply.yml  release-plan.yml  reusable-auth0-tenant-deploy.yml  reusable-bootstrap-foundation.yml  reusable-deploy-dev.yml  reusable-deploy-runtime.yml  reusable-post-deploy-validate.yml  reusable-promote-prod.yml  reusable-release-apply.yml  reusable-release-plan.yml  verify-signature.yml
apps/nova_auth_api_service/: Dockerfile  README.md  pyproject.toml
apps/nova_file_api_service/: Dockerfile  README.md  pyproject.toml
apps/nova_file_api_service/src/nova_file_api_service/: __init__.py  main.py
apps/nova_workflows_tasks/: Dockerfile
buildspecs/: buildspec-deploy-validate.yml  buildspec-release.yml
docs/: PRD.md  README.md
docs/architecture/: README.md  requirements-file-transfer-api.md  requirements-wave-2.md  requirements.md
docs/clients/: CLIENT-SDK-CANONICAL-PACKAGES.md  README.md  browser-dash-integration-guide.md  dash-minimal-workflow.yml  post-deploy-validation-integration-guide.md  react-next-minimal-workflow.yml  rshiny-minimal-workflow.yml
docs/contracts/: BREAKING-CHANGES-V2.md  README.md  browser-live-validation-report.schema.json  deploy-output-authority-v2.schema.json  deploy-size-profiles-v1.json  release-artifacts-v1.schema.json  release-execution-manifest-v1.schema.json  release-prep-v1.schema.json  reusable-workflow-inputs-v1.schema.json  reusable-workflow-outputs-v1.schema.json  runtime-config-contract.generated.md  ssm-runtime-base-url-v1.schema.json  workflow-auth0-tenant-deploy.schema.json  workflow-auth0-tenant-ops-v1.schema.json  workflow-deploy-runtime-v1.schema.json  workflow-post-deploy-validate.schema.json
docs/history/: README.md
docs/overview/: ACTIVE-DOCS-INDEX.md  CANONICAL-TARGET-2026-04.md  DEPENDENCY-LEVERAGE-AUDIT.md  ENTROPY-REDUCTION-LEDGER.md  IMPLEMENTATION-STATUS-MATRIX.md  NOVA-REPO-OVERVIEW.md
docs/plan/: 2026-03-01-adr0015-spec0015-implementation-blueprint.md  GREENFIELD-WAVE-2-EXECUTION.md  HISTORY-INDEX.md  PLAN.md  greenfield-authority-map.md  greenfield-simplification-program.md  r-sdk-finalization-and-downstream-r-consumer-integration.md
docs/release/: README.md  RELEASE-VERSION-MANIFEST.md  runtime-config-contract.generated.md
docs/runbooks/: README.md  RUNBOOK-SERVERLESS-OPERATIONS.md  observability-security-cost-baseline.md  worker-lane-operations-and-failure-handling.md
docs/standards/: DECISION-FRAMEWORKS-GREENFIELD-2026.md  README.md  repository-engineering-standards.md
infra/auth0/: README.md
infra/nova/: nova-ci-cd.yml  nova-codebuild-release.yml  nova-foundation.yml  nova-iam-roles.yml
infra/nova_cdk/: README.md  app.py  cdk.json  pyproject.toml
infra/nova_cdk/buildspecs/: release-promote-and-deploy-prod.yml  release-publish-and-deploy-dev.yml  release-validate.yml
infra/nova_cdk/src/nova_cdk/: __init__.py  concurrency.py  context_inputs.py  iam.py  ingress.py  observability.py  release_control_stack.py  release_support_stack.py  runtime_naming.py  runtime_release_manifest.py  runtime_stack.py  runtime_stack_queues.py  runtime_stack_storage.py  serverless_stack.py
infra/runtime/: ecr.yml  kms.yml
release/: README.md  RELEASE-PREP.json  RELEASE-VERSION-MANIFEST.md
scripts/: __init__.py
scripts/checks/: run_docker_release_images.sh  run_infra_contracts.sh  run_quality_gates.sh  run_sdk_conformance.sh  run_typing_gates.sh  verify_canonical_route_policy.sh  verify_r_cmd_check.sh
scripts/ci/: __init__.py  detect_workflow_scopes.py
scripts/conformance/: __init__.py  check_typescript_module_policy.py  typescript_sdk_smoke.mjs  validate_lane.py
scripts/contracts/: export_openapi.py
scripts/dev/: install_hooks.sh
scripts/perf/: __init__.py  benchmark_browser_upload_matrix.py  benchmark_export_copy.py  benchmark_transfer_control_plane.py  file_transfer_observability_baseline.py
scripts/release/: __init__.py  apply_versions.py  audit_auth0_tenant.py  bootstrap_auth0_tenant.py  build_api_lambda_asset.py  build_workflow_lambda_asset.py  changed_units.py  codeartifact_gate.py  codeartifact_npm.py  common.py  day-0-operator-command-pack.sh  deploy-runtime-cloudformation-environment.sh  download_run_artifact.py  emit_api_lambda_artifact_env.py  emit_workflow_lambda_artifact_env.py  export_runtime_stack_config_env.py  generate_clients.py  generate_python_clients.py  generate_runtime_config_contract.py  generate_runtime_deploy_contract.py  npm_publish.py  persist_auth0_env.py  prepare_release_pr.py  publish_workflow_api_tags.py  python_sdk.py  r_sdk.py  release_paths.py  release_prep.py  resolve_deploy_output.py  run_auth0_deploy_cli.py  runtime_config_contract.py  sdk_common.py  typescript_sdk.py  validate_auth0_contract.py  validate_route_contract.py  validate_runtime_release.py  validate_runtime_release_aws.py  validate_runtime_release_http.py  validate_runtime_release_shared.py  validate_runtime_release_types.py  (+4 more)
tests/infra/: __init__.py  helpers.py  test_absorbed_infra_contracts.py  test_aioboto3_dependency_contracts.py  test_cdk_app_entrypoint_contracts.py  test_cdk_module_boundaries.py  test_ci_scope_detector.py  test_deploy_output_contracts.py  (+16 more)
(+322 files in other folders)
