[project]
name = "nova"
version = "0.1.0"
description = "Monorepo runtime for file transfer and auth API services."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "LicenseRef-Proprietary"
authors = [{ name = "3M Cloud" }]
maintainers = [
  { name = "Bjorn Melin", email = "bmelin@mmm.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "nova-auth-api",
  "nova-dash-bridge",
  "nova-file-api",
  "nova-runtime-support",
]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "openapi-python-client>=0.26.2",
  "pre-commit>=4.3.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.1",
  "ty>=0.0.21",
  "types-python-dateutil>=2.9.0.20250516",
]

[project.urls]
Repository = "https://github.com/3M-Cloud/nova"
Documentation = "https://github.com/3M-Cloud/nova/tree/main/docs"

[tool.uv]
default-groups = ["dev"]
required-version = "==0.10.10"

[tool.uv.workspace]
members = [
  "packages/nova_sdk_py_file",
  "packages/nova_sdk_py_auth",
  "packages/nova_auth_api",
  "packages/nova_dash_bridge",
  "packages/nova_file_api",
  "packages/nova_runtime_support",
]

[tool.uv.sources]
nova-auth-api = { workspace = true }
nova-dash-bridge = { workspace = true }
nova-file-api = { workspace = true }
nova-runtime-support = { workspace = true }

[tool.nova.release]

[[tool.nova.release.units]]
unit_id = "packages/nova_sdk_r_file"
path = "packages/nova_sdk_r_file"
project_name = "nova.sdk.r.file"
dependencies = []
format = "r"
codeartifact_format = "generic"
namespace = "nova"

[[tool.nova.release.units]]
unit_id = "packages/nova_sdk_r_auth"
path = "packages/nova_sdk_r_auth"
project_name = "nova.sdk.r.auth"
dependencies = []
format = "r"
codeartifact_format = "generic"
namespace = "nova"

[tool.pytest.ini_options]
minversion = "9.0"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
testpaths = [
  "packages/nova_auth_api/tests",
  "packages/nova_file_api/tests",
  "scripts/release/tests",
  "tests/infra",
]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--import-mode=importlib",
]
filterwarnings = [
  "error",
]

[tool.ruff]
line-length = 80
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",     # Errors
  "W",     # Warnings
  "F",     # Flake8
  "I",     # Imports
  "B",     # Bugbear
  "UP",    # Upgrades
  "SIM",   # Simplicity
  "D",     # Docstring
  "FAST",  # FastAPI
  "ASYNC", # flake8-async
  "S",     # flake8-bandit
  "PERF",  # flake8-performance
  "TRY",   # flake8-try
  "RUF",   # ruff
]
ignore = ["D203", "D213", "S101", "TRY301", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["D"]
"packages/nova_sdk_py_auth/src/**/*.py" = ["D", "E501"]
"packages/nova_sdk_py_file/src/**/*.py" = ["D", "E501"]
"packages/nova_auth_api/src/nova_auth_api/operation_ids.py" = ["S105"]
"packages/nova_auth_api/tests/test_app.py" = ["S105"]
"packages/nova_auth_api/tests/test_service.py" = ["S106"]
"packages/nova_file_api/src/nova_file_api/config.py" = ["S105"]
"packages/nova_file_api/src/nova_file_api/routes/common.py" = ["S105"]
"packages/nova_file_api/tests/test_activity_dynamo.py" = ["S105"]
"packages/nova_file_api/tests/test_auth.py" = ["S106"]
"packages/nova_file_api/tests/test_generated_client_smoke.py" = ["S603"]
"packages/nova_file_api/tests/test_logging_sanitization.py" = ["S105"]
"scripts/release/codeartifact_npm.py" = ["S603", "S607"]
"scripts/release/common.py" = ["S603", "S607"]
"scripts/release/download_run_artifact.py" = ["S310"]
"scripts/release/generate_clients.py" = ["S603"]
"scripts/release/generate_python_clients.py" = ["S603"]
"scripts/release/tests/test_download_run_artifact.py" = ["S106"]
"scripts/release/validate_route_contract.py" = ["S310"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
pretty = true
files = [
  "packages/nova_auth_api/src",
  "packages/nova_dash_bridge/src",
  "packages/nova_file_api/src",
  "packages/nova_runtime_support/src",
  "packages/nova_sdk_py_auth/src",
  "packages/nova_sdk_py_file/src",
  "scripts/contracts",
  "scripts/release",
]

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*", "oidc_jwt_verifier"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dash", "dash.*", "flask", "flask.*"]
ignore_missing_imports = true

[tool.ty.environment]
python = ".venv"
python-version = "3.12"
root = [
  ".",
  "packages/nova_auth_api/src",
  "packages/nova_dash_bridge/src",
  "packages/nova_file_api/src",
  "packages/nova_runtime_support/src",
  "packages/nova_sdk_py_auth/src",
  "packages/nova_sdk_py_file/src",
]

[tool.ty.src]
include = ["packages", "scripts"]
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
]

[tool.ty.analysis]
respect-type-ignore-comments = true
replace-imports-with-any = [
  "boto3",
  "botocore",
  "botocore.**",
  "dash",
  "dash.**",
  "flask",
  "flask.**",
  "mypy_boto3_s3",
  "oidc_jwt_verifier",
]

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"
