[project]
name = "nova"
version = "0.1.0"
description = "Monorepo runtime for file transfer and bridge integrations."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "LicenseRef-Proprietary"
authors = [{ name = "3M Cloud" }]
maintainers = [
  { name = "Bjorn Melin", email = "bmelin@mmm.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "nova-dash-bridge",
  "nova-file-api",
  "nova-runtime-support",
  "nova-workflows",
]

[dependency-groups]
dev = [
  "auth0-python>=5.2.0,<6",
  "aws-cdk-lib>=2.248.0,<3",
  "constructs>=10.5.0,<11",
  "httpx>=0.28.1",
  "mypy>=1.20.0",
  "openapi-python-client==0.28.3",
  "pre-commit>=4.3.0",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.9",
  "ty>=0.0.29",
  "types-PyYAML>=6.0.12.20250915",
  "types-aiobotocore-s3~=2.25.2",
  "types-python-dateutil>=2.9.0.20260402",
]

[project.urls]
Repository = "https://github.com/3M-Cloud/nova"
Documentation = "https://github.com/3M-Cloud/nova/tree/main/docs"

[tool.uv]
default-groups = ["dev"]
required-version = "==0.11.2"

[tool.uv.workspace]
members = [
  "packages/nova_sdk_py",
  "packages/nova_dash_bridge",
  "packages/nova_file_api",
  "packages/nova_runtime_support",
  "packages/nova_workflows",
  "infra/nova_cdk",
]

[tool.uv.sources]
nova-dash-bridge = { workspace = true }
nova-file-api = { workspace = true }
nova-runtime-support = { workspace = true }
nova-workflows = { workspace = true }

[tool.nova.release]

[[tool.nova.release.units]]
unit_id = "packages/nova_sdk_r"
path = "packages/nova_sdk_r"
project_name = "nova"
dependencies = []
format = "r"
codeartifact_format = "generic"
namespace = "nova"

[tool.pytest.ini_options]
minversion = "9.0"
strict_parametrization_ids = true
strict_xfail = true
testpaths = [
  "packages/nova_dash_bridge/tests",
  "packages/nova_file_api/tests",
  "packages/nova_runtime_support/tests",
  "scripts/release/tests",
  "packages/nova_workflows/tests",
  "tests/infra",
]
markers = [
  "generated_smoke: generated client smoke tests that run as a dedicated lane",
  "runtime_gate: critical runtime, security, and reliability gate subset",
]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--import-mode=importlib",
]
filterwarnings = [
  "error",
]

[tool.coverage.run]
branch = true
parallel = true
source = [
  "packages/nova_dash_bridge/src",
  "packages/nova_file_api/src",
  "packages/nova_runtime_support/src",
  "packages/nova_workflows/src",
  "infra/nova_cdk/src",
  "scripts/release",
]

[tool.coverage.report]
skip_covered = false
show_missing = true
omit = [
  "**/tests/**",
]

[tool.ruff]
line-length = 80
target-version = "py311"
# Monorepo layout: repo root (scripts.*), workspace packages, CDK app.
src = [".", "packages/*/src", "infra/nova_cdk/src"]
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",     # Errors
  "W",     # Warnings
  "F",     # Flake8
  "I",     # Imports
  "B",     # Bugbear
  "UP",    # Upgrades
  "SIM",   # Simplicity
  "D",     # Docstring
  "FAST",  # FastAPI
  "ASYNC", # flake8-async
  "S",     # flake8-bandit
  "PERF",  # flake8-performance
  "TRY",   # flake8-try
  "RUF",   # ruff
]
ignore = ["D203", "D213", "S101", "TRY301", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["D"]
"packages/nova_sdk_py/src/**/*.py" = [
  "D",
  "E501",
  "SIM108",
  "TRY300",
  "UP042",
  "UP046",
]
"packages/nova_file_api/src/nova_file_api/config.py" = ["S105"]
"packages/nova_file_api/src/nova_file_api/routes/common.py" = ["S105"]
"packages/nova_file_api/tests/test_activity_dynamo.py" = ["S105"]
"packages/nova_file_api/tests/test_auth.py" = ["S106"]
"packages/nova_file_api/tests/test_generated_client_smoke.py" = ["S106", "S603"]
"packages/nova_file_api/tests/test_logging_sanitization.py" = ["S105"]
"scripts/release/codeartifact_npm.py" = ["S603", "S607"]
"scripts/release/build_api_lambda_asset.py" = ["S603"]
"scripts/release/common.py" = ["S603", "S607"]
"scripts/release/download_run_artifact.py" = ["S310"]
"scripts/release/generate_clients.py" = ["S603"]
"scripts/release/generate_python_clients.py" = ["S603"]
"scripts/release/tests/test_download_run_artifact.py" = ["S106"]
"scripts/release/validate_runtime_release.py" = ["S310"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Ref: https://docs.astral.sh/ruff/settings/#lintisort
[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
pretty = true
exclude_gitignore = true
files = [
  "packages/nova_dash_bridge/src",
  "packages/nova_file_api/src",
  "packages/nova_runtime_support/src",
  "packages/nova_sdk_py/src",
  "packages/nova_workflows/src",
  "infra/nova_cdk/src",
  "scripts/contracts",
  "scripts/release",
]

[[tool.mypy.overrides]]
module = ["aioboto3", "boto3", "botocore.*", "oidc_jwt_verifier"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dash", "dash.*", "flask", "flask.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aws_cdk", "aws_cdk.*", "constructs"]
ignore_missing_imports = true

[tool.ty.environment]
python = ".venv"
python-version = "3.11"
root = [
  ".",
  "packages/nova_dash_bridge/src",
  "packages/nova_file_api/src",
  "packages/nova_runtime_support/src",
  "packages/nova_sdk_py/src",
  "packages/nova_workflows/src",
  "infra/nova_cdk/src",
]

[tool.ty.src]
include = ["packages", "scripts"]
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
]

[tool.ty.analysis]
respect-type-ignore-comments = true
replace-imports-with-any = [
  "boto3",
  "botocore",
  "botocore.**",
  "dash",
  "dash.**",
  "flask",
  "flask.**",
  "mypy_boto3_s3",
  "oidc_jwt_verifier",
]

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"
